Chapter-2/Part-3/e-1.07/log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP # Service Type: give Service obj internal IP accessible within cluster
  selector:
    app: log-output
    version: "1.07"
    component: backend
  ports:
    - name: http
      port: 2345 # Service port -- can be anything
      targetPort: 8080 # app port
      protocol: TCP
